[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "__init__.py"

[project]
name = "pyromania"
authors = [
    {name = "Tim Allen", email = "tallen@wharton.upenn.edu"},
]
description = "Pyromania creates and manages Python 3 venvs, inspired by virtualenvwrapper."
readme = "README.md"
requires-python = ">=3.3"
keywords = ["venv", "virtualenv", "virtual environment", "docker", "container"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FlipperPA/pyromania/"
"Repository" = "https://github.com/FlipperPA/pyromania/"
"Documentation" = "https://github.com/FlipperPA/pyromania/"
"Bug Tracker" = "https://github.com/FlipperPA/pyromania/issues"
